src/vb/week4/xcalc/CalcParser.java
// $ANTLR 3.5 Calc.g 2013-05-23 17:21:41

package vb.week4.xcalc;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class CalcParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "BECOMES", "COLON", "COMMA", "COMMENT", 
		"DIGIT", "DO", "ELSE", "EQUALS", "GREATER", "GREATEREQ", "IDENTIFIER", 
		"IF", "INTEGER", "LETTER", "LOWER", "LPAREN", "MINUS", "NOTEQUALS", "NUMBER", 
		"PLUS", "PRINT", "PROGRAM", "QUOTIENT", "RPAREN", "SEMICOLON", "SMALLER", 
		"SMALLEREQ", "SWAP", "THEN", "TIMES", "UPPER", "VAR", "WHILE", "WS"
	};
	public static final int EOF=-1;
	public static final int BECOMES=4;
	public static final int COLON=5;
	public static final int COMMA=6;
	public static final int COMMENT=7;
	public static final int DIGIT=8;
	public static final int DO=9;
	public static final int ELSE=10;
	public static final int EQUALS=11;
	public static final int GREATER=12;
	public static final int GREATEREQ=13;
	public static final int IDENTIFIER=14;
	public static final int IF=15;
	public static final int INTEGER=16;
	public static final int LETTER=17;
	public static final int LOWER=18;
	public static final int LPAREN=19;
	public static final int MINUS=20;
	public static final int NOTEQUALS=21;
	public static final int NUMBER=22;
	public static final int PLUS=23;
	public static final int PRINT=24;
	public static final int PROGRAM=25;
	public static final int QUOTIENT=26;
	public static final int RPAREN=27;
	public static final int SEMICOLON=28;
	public static final int SMALLER=29;
	public static final int SMALLEREQ=30;
	public static final int SWAP=31;
	public static final int THEN=32;
	public static final int TIMES=33;
	public static final int UPPER=34;
	public static final int VAR=35;
	public static final int WHILE=36;
	public static final int WS=37;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public CalcParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public CalcParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return CalcParser.tokenNames; }
	@Override public String getGrammarFileName() { return "Calc.g"; }


	public static class program_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "program"
	// Calc.g:53:1: program : program_lines EOF -> ^( PROGRAM program_lines ) ;
	public final CalcParser.program_return program() throws RecognitionException {
		CalcParser.program_return retval = new CalcParser.program_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token EOF2=null;
		ParserRuleReturnScope program_lines1 =null;

		Object EOF2_tree=null;
		RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_program_lines=new RewriteRuleSubtreeStream(adaptor,"rule program_lines");

		try {
			// Calc.g:54:5: ( program_lines EOF -> ^( PROGRAM program_lines ) )
			// Calc.g:54:9: program_lines EOF
			{
			pushFollow(FOLLOW_program_lines_in_program623);
			program_lines1=program_lines();
			state._fsp--;

			stream_program_lines.add(program_lines1.getTree());
			EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_program625);  
			stream_EOF.add(EOF2);

			// AST REWRITE
			// elements: program_lines
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 55:13: -> ^( PROGRAM program_lines )
			{
				// Calc.g:55:17: ^( PROGRAM program_lines )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(PROGRAM, "PROGRAM"), root_1);
				adaptor.addChild(root_1, stream_program_lines.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program"


	public static class program_lines_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "program_lines"
	// Calc.g:58:1: program_lines : ( ( statement | declaration ) SEMICOLON !)* ;
	public final CalcParser.program_lines_return program_lines() throws RecognitionException {
		CalcParser.program_lines_return retval = new CalcParser.program_lines_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token SEMICOLON5=null;
		ParserRuleReturnScope statement3 =null;
		ParserRuleReturnScope declaration4 =null;

		Object SEMICOLON5_tree=null;

		try {
			// Calc.g:59:2: ( ( ( statement | declaration ) SEMICOLON !)* )
			// Calc.g:59:4: ( ( statement | declaration ) SEMICOLON !)*
			{
			root_0 = (Object)adaptor.nil();


			// Calc.g:59:4: ( ( statement | declaration ) SEMICOLON !)*
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==DO||LA2_0==IDENTIFIER||LA2_0==PRINT||LA2_0==SWAP||LA2_0==VAR) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// Calc.g:59:5: ( statement | declaration ) SEMICOLON !
					{
					// Calc.g:59:5: ( statement | declaration )
					int alt1=2;
					int LA1_0 = input.LA(1);
					if ( (LA1_0==DO||LA1_0==IDENTIFIER||LA1_0==PRINT||LA1_0==SWAP) ) {
						alt1=1;
					}
					else if ( (LA1_0==VAR) ) {
						alt1=2;
					}

					else {
						NoViableAltException nvae =
							new NoViableAltException("", 1, 0, input);
						throw nvae;
					}

					switch (alt1) {
						case 1 :
							// Calc.g:59:6: statement
							{
							pushFollow(FOLLOW_statement_in_program_lines666);
							statement3=statement();
							state._fsp--;

							adaptor.addChild(root_0, statement3.getTree());

							}
							break;
						case 2 :
							// Calc.g:59:18: declaration
							{
							pushFollow(FOLLOW_declaration_in_program_lines670);
							declaration4=declaration();
							state._fsp--;

							adaptor.addChild(root_0, declaration4.getTree());

							}
							break;

					}

					SEMICOLON5=(Token)match(input,SEMICOLON,FOLLOW_SEMICOLON_in_program_lines673); 
					}
					break;

				default :
					break loop2;
				}
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program_lines"


	public static class declaration_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "declaration"
	// Calc.g:62:1: declaration : VAR ^ IDENTIFIER COLON ! type ;
	public final CalcParser.declaration_return declaration() throws RecognitionException {
		CalcParser.declaration_return retval = new CalcParser.declaration_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token VAR6=null;
		Token IDENTIFIER7=null;
		Token COLON8=null;
		ParserRuleReturnScope type9 =null;

		Object VAR6_tree=null;
		Object IDENTIFIER7_tree=null;
		Object COLON8_tree=null;

		try {
			// Calc.g:63:5: ( VAR ^ IDENTIFIER COLON ! type )
			// Calc.g:63:9: VAR ^ IDENTIFIER COLON ! type
			{
			root_0 = (Object)adaptor.nil();


			VAR6=(Token)match(input,VAR,FOLLOW_VAR_in_declaration692); 
			VAR6_tree = (Object)adaptor.create(VAR6);
			root_0 = (Object)adaptor.becomeRoot(VAR6_tree, root_0);

			IDENTIFIER7=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_declaration695); 
			IDENTIFIER7_tree = (Object)adaptor.create(IDENTIFIER7);
			adaptor.addChild(root_0, IDENTIFIER7_tree);

			COLON8=(Token)match(input,COLON,FOLLOW_COLON_in_declaration697); 
			pushFollow(FOLLOW_type_in_declaration700);
			type9=type();
			state._fsp--;

			adaptor.addChild(root_0, type9.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "declaration"


	public static class dowhileStatement_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "dowhileStatement"
	// Calc.g:66:1: dowhileStatement : DO ^ statements WHILE expr_if ;
	public final CalcParser.dowhileStatement_return dowhileStatement() throws RecognitionException {
		CalcParser.dowhileStatement_return retval = new CalcParser.dowhileStatement_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token DO10=null;
		Token WHILE12=null;
		ParserRuleReturnScope statements11 =null;
		ParserRuleReturnScope expr_if13 =null;

		Object DO10_tree=null;
		Object WHILE12_tree=null;

		try {
			// Calc.g:66:18: ( DO ^ statements WHILE expr_if )
			// Calc.g:66:20: DO ^ statements WHILE expr_if
			{
			root_0 = (Object)adaptor.nil();


			DO10=(Token)match(input,DO,FOLLOW_DO_in_dowhileStatement717); 
			DO10_tree = (Object)adaptor.create(DO10);
			root_0 = (Object)adaptor.becomeRoot(DO10_tree, root_0);

			pushFollow(FOLLOW_statements_in_dowhileStatement720);
			statements11=statements();
			state._fsp--;

			adaptor.addChild(root_0, statements11.getTree());

			WHILE12=(Token)match(input,WHILE,FOLLOW_WHILE_in_dowhileStatement722); 
			WHILE12_tree = (Object)adaptor.create(WHILE12);
			adaptor.addChild(root_0, WHILE12_tree);

			pushFollow(FOLLOW_expr_if_in_dowhileStatement724);
			expr_if13=expr_if();
			state._fsp--;

			adaptor.addChild(root_0, expr_if13.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "dowhileStatement"


	public static class statements_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "statements"
	// Calc.g:67:1: statements : ( statement SEMICOLON !)+ ;
	public final CalcParser.statements_return statements() throws RecognitionException {
		CalcParser.statements_return retval = new CalcParser.statements_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token SEMICOLON15=null;
		ParserRuleReturnScope statement14 =null;

		Object SEMICOLON15_tree=null;

		try {
			// Calc.g:67:12: ( ( statement SEMICOLON !)+ )
			// Calc.g:67:14: ( statement SEMICOLON !)+
			{
			root_0 = (Object)adaptor.nil();


			// Calc.g:67:14: ( statement SEMICOLON !)+
			int cnt3=0;
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==DO||LA3_0==IDENTIFIER||LA3_0==PRINT||LA3_0==SWAP) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					// Calc.g:67:15: statement SEMICOLON !
					{
					pushFollow(FOLLOW_statement_in_statements733);
					statement14=statement();
					state._fsp--;

					adaptor.addChild(root_0, statement14.getTree());

					SEMICOLON15=(Token)match(input,SEMICOLON,FOLLOW_SEMICOLON_in_statements735); 
					}
					break;

				default :
					if ( cnt3 >= 1 ) break loop3;
					EarlyExitException eee = new EarlyExitException(3, input);
					throw eee;
				}
				cnt3++;
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "statements"


	public static class statement_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "statement"
	// Calc.g:69:1: statement : ( assignment | dowhileStatement | print_stat | swap_stat );
	public final CalcParser.statement_return statement() throws RecognitionException {
		CalcParser.statement_return retval = new CalcParser.statement_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope assignment16 =null;
		ParserRuleReturnScope dowhileStatement17 =null;
		ParserRuleReturnScope print_stat18 =null;
		ParserRuleReturnScope swap_stat19 =null;


		try {
			// Calc.g:70:5: ( assignment | dowhileStatement | print_stat | swap_stat )
			int alt4=4;
			switch ( input.LA(1) ) {
			case IDENTIFIER:
				{
				alt4=1;
				}
				break;
			case DO:
				{
				alt4=2;
				}
				break;
			case PRINT:
				{
				alt4=3;
				}
				break;
			case SWAP:
				{
				alt4=4;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}
			switch (alt4) {
				case 1 :
					// Calc.g:70:9: assignment
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_assignment_in_statement757);
					assignment16=assignment();
					state._fsp--;

					adaptor.addChild(root_0, assignment16.getTree());

					}
					break;
				case 2 :
					// Calc.g:71:7: dowhileStatement
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_dowhileStatement_in_statement765);
					dowhileStatement17=dowhileStatement();
					state._fsp--;

					adaptor.addChild(root_0, dowhileStatement17.getTree());

					}
					break;
				case 3 :
					// Calc.g:72:9: print_stat
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_print_stat_in_statement775);
					print_stat18=print_stat();
					state._fsp--;

					adaptor.addChild(root_0, print_stat18.getTree());

					}
					break;
				case 4 :
					// Calc.g:73:7: swap_stat
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_swap_stat_in_statement783);
					swap_stat19=swap_stat();
					state._fsp--;

					adaptor.addChild(root_0, swap_stat19.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "statement"


	public static class assignment_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "assignment"
	// Calc.g:76:1: assignment : lvalue BECOMES ^ expr ;
	public final CalcParser.assignment_return assignment() throws RecognitionException {
		CalcParser.assignment_return retval = new CalcParser.assignment_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token BECOMES21=null;
		ParserRuleReturnScope lvalue20 =null;
		ParserRuleReturnScope expr22 =null;

		Object BECOMES21_tree=null;

		try {
			// Calc.g:77:5: ( lvalue BECOMES ^ expr )
			// Calc.g:77:9: lvalue BECOMES ^ expr
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_lvalue_in_assignment802);
			lvalue20=lvalue();
			state._fsp--;

			adaptor.addChild(root_0, lvalue20.getTree());

			BECOMES21=(Token)match(input,BECOMES,FOLLOW_BECOMES_in_assignment804); 
			BECOMES21_tree = (Object)adaptor.create(BECOMES21);
			root_0 = (Object)adaptor.becomeRoot(BECOMES21_tree, root_0);

			pushFollow(FOLLOW_expr_in_assignment807);
			expr22=expr();
			state._fsp--;

			adaptor.addChild(root_0, expr22.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "assignment"


	public static class print_stat_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "print_stat"
	// Calc.g:80:1: print_stat : PRINT ^ LPAREN ! expr RPAREN !;
	public final CalcParser.print_stat_return print_stat() throws RecognitionException {
		CalcParser.print_stat_return retval = new CalcParser.print_stat_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token PRINT23=null;
		Token LPAREN24=null;
		Token RPAREN26=null;
		ParserRuleReturnScope expr25 =null;

		Object PRINT23_tree=null;
		Object LPAREN24_tree=null;
		Object RPAREN26_tree=null;

		try {
			// Calc.g:81:5: ( PRINT ^ LPAREN ! expr RPAREN !)
			// Calc.g:81:9: PRINT ^ LPAREN ! expr RPAREN !
			{
			root_0 = (Object)adaptor.nil();


			PRINT23=(Token)match(input,PRINT,FOLLOW_PRINT_in_print_stat826); 
			PRINT23_tree = (Object)adaptor.create(PRINT23);
			root_0 = (Object)adaptor.becomeRoot(PRINT23_tree, root_0);

			LPAREN24=(Token)match(input,LPAREN,FOLLOW_LPAREN_in_print_stat829); 
			pushFollow(FOLLOW_expr_in_print_stat832);
			expr25=expr();
			state._fsp--;

			adaptor.addChild(root_0, expr25.getTree());

			RPAREN26=(Token)match(input,RPAREN,FOLLOW_RPAREN_in_print_stat834); 
			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "print_stat"


	public static class swap_stat_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "swap_stat"
	// Calc.g:84:1: swap_stat : SWAP ^ LPAREN ! IDENTIFIER COMMA ! IDENTIFIER RPAREN !;
	public final CalcParser.swap_stat_return swap_stat() throws RecognitionException {
		CalcParser.swap_stat_return retval = new CalcParser.swap_stat_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token SWAP27=null;
		Token LPAREN28=null;
		Token IDENTIFIER29=null;
		Token COMMA30=null;
		Token IDENTIFIER31=null;
		Token RPAREN32=null;

		Object SWAP27_tree=null;
		Object LPAREN28_tree=null;
		Object IDENTIFIER29_tree=null;
		Object COMMA30_tree=null;
		Object IDENTIFIER31_tree=null;
		Object RPAREN32_tree=null;

		try {
			// Calc.g:85:2: ( SWAP ^ LPAREN ! IDENTIFIER COMMA ! IDENTIFIER RPAREN !)
			// Calc.g:85:4: SWAP ^ LPAREN ! IDENTIFIER COMMA ! IDENTIFIER RPAREN !
			{
			root_0 = (Object)adaptor.nil();


			SWAP27=(Token)match(input,SWAP,FOLLOW_SWAP_in_swap_stat853); 
			SWAP27_tree = (Object)adaptor.create(SWAP27);
			root_0 = (Object)adaptor.becomeRoot(SWAP27_tree, root_0);

			LPAREN28=(Token)match(input,LPAREN,FOLLOW_LPAREN_in_swap_stat856); 
			IDENTIFIER29=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_swap_stat859); 
			IDENTIFIER29_tree = (Object)adaptor.create(IDENTIFIER29);
			adaptor.addChild(root_0, IDENTIFIER29_tree);

			COMMA30=(Token)match(input,COMMA,FOLLOW_COMMA_in_swap_stat861); 
			IDENTIFIER31=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_swap_stat864); 
			IDENTIFIER31_tree = (Object)adaptor.create(IDENTIFIER31);
			adaptor.addChild(root_0, IDENTIFIER31_tree);

			RPAREN32=(Token)match(input,RPAREN,FOLLOW_RPAREN_in_swap_stat866); 
			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "swap_stat"


	public static class lvalue_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "lvalue"
	// Calc.g:88:1: lvalue : IDENTIFIER ;
	public final CalcParser.lvalue_return lvalue() throws RecognitionException {
		CalcParser.lvalue_return retval = new CalcParser.lvalue_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token IDENTIFIER33=null;

		Object IDENTIFIER33_tree=null;

		try {
			// Calc.g:89:5: ( IDENTIFIER )
			// Calc.g:89:9: IDENTIFIER
			{
			root_0 = (Object)adaptor.nil();


			IDENTIFIER33=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_lvalue883); 
			IDENTIFIER33_tree = (Object)adaptor.create(IDENTIFIER33);
			adaptor.addChild(root_0, IDENTIFIER33_tree);

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "lvalue"


	public static class expr_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "expr"
	// Calc.g:92:1: expr : expr_assign ;
	public final CalcParser.expr_return expr() throws RecognitionException {
		CalcParser.expr_return retval = new CalcParser.expr_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope expr_assign34 =null;


		try {
			// Calc.g:93:2: ( expr_assign )
			// Calc.g:93:4: expr_assign
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_expr_assign_in_expr901);
			expr_assign34=expr_assign();
			state._fsp--;

			adaptor.addChild(root_0, expr_assign34.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "expr"


	public static class expr_assign_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "expr_assign"
	// Calc.g:96:1: expr_assign : expr_if ( BECOMES ^ expr_assign )? ;
	public final CalcParser.expr_assign_return expr_assign() throws RecognitionException {
		CalcParser.expr_assign_return retval = new CalcParser.expr_assign_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token BECOMES36=null;
		ParserRuleReturnScope expr_if35 =null;
		ParserRuleReturnScope expr_assign37 =null;

		Object BECOMES36_tree=null;

		try {
			// Calc.g:97:2: ( expr_if ( BECOMES ^ expr_assign )? )
			// Calc.g:97:4: expr_if ( BECOMES ^ expr_assign )?
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_expr_if_in_expr_assign913);
			expr_if35=expr_if();
			state._fsp--;

			adaptor.addChild(root_0, expr_if35.getTree());

			// Calc.g:97:12: ( BECOMES ^ expr_assign )?
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==BECOMES) ) {
				alt5=1;
			}
			switch (alt5) {
				case 1 :
					// Calc.g:97:13: BECOMES ^ expr_assign
					{
					BECOMES36=(Token)match(input,BECOMES,FOLLOW_BECOMES_in_expr_assign916); 
					BECOMES36_tree = (Object)adaptor.create(BECOMES36);
					root_0 = (Object)adaptor.becomeRoot(BECOMES36_tree, root_0);

					pushFollow(FOLLOW_expr_assign_in_expr_assign919);
					expr_assign37=expr_assign();
					state._fsp--;

					adaptor.addChild(root_0, expr_assign37.getTree());

					}
					break;

			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "expr_assign"


	public static class expr_if_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "expr_if"
	// Calc.g:100:1: expr_if : ( IF ^ expr_if THEN ! expr_if ELSE ! expr_if | expr_rel );
	public final CalcParser.expr_if_return expr_if() throws RecognitionException {
		CalcParser.expr_if_return retval = new CalcParser.expr_if_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token IF38=null;
		Token THEN40=null;
		Token ELSE42=null;
		ParserRuleReturnScope expr_if39 =null;
		ParserRuleReturnScope expr_if41 =null;
		ParserRuleReturnScope expr_if43 =null;
		ParserRuleReturnScope expr_rel44 =null;

		Object IF38_tree=null;
		Object THEN40_tree=null;
		Object ELSE42_tree=null;
